# robo-claw

./: .env.example  .gitignore  00_MASTER_PLAN.md  01_PHASE_1_CORE_AND_MESH.md  02_PHASE_2_SKILL_RUNTIME.md  03_PHASE_3_INTELLIGENCE.md  04_PHASE_4_GATEWAY_AND_ORCHESTRATOR.md  05_PHASE_5_INTEGRATION.md  ARIA_Complete_Architecture_v3.0.docx  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Final_Supreme_Architecture_Blueprint.md  Grok report.docx  HIVECLAW.md  LLM_SYSTEM_PROMPT.md  Local AI Orchestration Architecture Design.docx  OmniClaw_Architecture.md  README.md  build.sh  dev.sh  run.sh
.agents/workflows/: anima-implement-v1.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
.hiveclaw/: config.toml
.hiveclaw/agents/: README.md
agents/: communicator.toml  developer.toml  omni.toml  productivity.toml  researcher.toml  robotics_ctrl.toml  sensor_analyst.toml
aria-core/: Cargo.toml
aria-core/src/: agent.rs  app.rs  computer.rs  execution_backend.rs  lib.rs  model.rs  robotics.rs  runtime.rs  tests.rs
aria-gateway/: Cargo.toml
aria-gateway/src/: adapter.rs  auth.rs  backpressure.rs  cli.rs  discord.rs  error.rs  http_api.rs  imessage.rs  lib.rs  normalizer.rs  ros2.rs  slack.rs  telegram.rs  websocket.rs  whatsapp.rs
aria-intelligence/: Cargo.toml
aria-intelligence/src/: hardware.rs  lib.rs  lifecycle.rs  middleware.rs  orchestrator.rs  prompting.rs  remote_execution.rs  router.rs  runtime.rs  tests.rs  tools.rs
aria-intelligence/src/backends/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
aria-learning/: Cargo.toml
aria-mcp/: Cargo.toml
aria-mcp/src/: lib.rs
aria-mesh/: Cargo.toml
aria-mesh/src/: lib.rs
aria-policy/: Cargo.toml
aria-policy/policies/: default.cedar
aria-policy/src/: lib.rs
aria-safety/: Cargo.toml
aria-safety/src/: lib.rs
aria-skill-runtime/: Cargo.toml
aria-skill-runtime/src/: lib.rs
aria-skill-runtime/test-fixtures/: hello.wasm
aria-skill-runtime/test-plugins/hello-plugin/: Cargo.toml
aria-skill-runtime/test-plugins/hello-plugin/src/: lib.rs
aria-ssmu/: Cargo.toml
aria-ssmu/src/: lib.rs  persistence.rs  vector.rs
aria-vault/: Cargo.toml
aria-vault/src/: lib.rs
aria-x/: Cargo.toml  config.example.toml  config.toml
aria-x/src/: approvals.rs  bootstrap.rs  browser.rs  computer.rs  config.rs  execution_backends.rs  gateway_runtime.rs  main.rs  operator.rs  outbound.rs  redaction.rs  robotics_bridge.rs  robotics_runtime.rs  ros2_bridge.rs  rules.rs  runtime_store.rs  stt.rs  telemetry_export.rs  test_support.rs  tools.rs  tui.rs  workspace_lock.rs
aria-x/src/runtime_store/: audits.rs  computer.rs  execution_backends.rs  learning.rs  outbound.rs  queues.rs  robotics.rs  runs.rs  schema.rs  skills.rs  tests.inc  tests.rs
aria-x/tests/: e2e_pipeline.rs
docs/: ARCHITECTURE_BACKLOG.md  BUGS.md  CHROME_DEVTOOLS_MCP.md  HIVECLAW_COMPUTER_RUNTIME.md  HIVECLAW_DISTRIBUTED_EXECUTION.md  HIVECLAW_EDGE_MODE.md  HIVECLAW_EDGE_ROBOTICS_DEPLOYMENT.md  HIVECLAW_EVALS_TELEMETRY.md  HIVECLAW_EXECUTION_ROADMAP.md  HIVECLAW_IMPLEMENTATION_CHECKLIST.md  HIVECLAW_OPERATOR_WORKBENCH.md  HIVECLAW_RULES_HOOKS_SKILLS.md  PROVIDER_TOOL_CALL_ARCHITECTURE_PLAN.md  PROVIDER_TOOL_CALL_IMPLEMENTATION_TODO.md
docs/architecture/: 01-macro-system-architecture.md  02-agent-internals-memory-management.md  03-data-flow-schemas-and-concurrency.md  04-decision-trees-and-workflows.md  README.md
docs/replay/: golden_example.toml  provider_benchmark_example.toml
docs/robotics/: ros2_simulation_example.json  simulation_example.json
nodes/: README.md  companion.toml  micro.toml  orchestrator.toml  relay.toml
scripts/: build-release.sh  check-telegram-webhook.sh
