[package]
name = "aria-core"
version = "0.1.0"
edition = "2021"
description = "HiveClaw foundational types — no_std compatible"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
