[package]
name = "aria-mesh"
version = "0.1.0"
edition = "2021"
description = "ARIA-X L4 Mesh Transport — Zenoh-based pub/sub"

[dependencies]
aria-core = { path = "../aria-core" }
zenoh = { version = "1.7", default-features = false, features = ["default"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
