[package]
name = "aria-x"
version = "0.1.0"
edition = "2021"
description = "ARIA-X orchestrator binary — wires all crates into the final agent runtime"

[[bin]]
name = "aria-x"
path = "src/main.rs"

[dependencies]
aria-core = { path = "../aria-core" }
aria-policy = { path = "../aria-policy" }
aria-skill-runtime = { path = "../aria-skill-runtime" }
aria-ssmu = { path = "../aria-ssmu" }
aria-intelligence = { path = "../aria-intelligence" }
aria-gateway = { path = "../aria-gateway" }
aria-safety = { path = "../aria-safety" }
aria-vault = { path = "../aria-vault" }
axum = { version = "0.7", features = ["json", "macros"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6.1.0"
hex = "0.4"
cron = "0.15.0"
chrono = "0.4.44"
chrono-tz = "0.10"
iana-time-zone = "0.1"
toml_edit = "0.25.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
